# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "usb-seppo"
version = "0.1.2"


[features]
default = ["blue_pill"]
blue_pill = ["stm32f1xx-hal"]


[dependencies.stm32f1xx-hal]
optional = true
features = ["stm32f103", "rt", "stm32-usbd"]
version = "0.10"


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
# systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
systick-monotonic = { version = "1.0" }
embedded-hal = "0.2"
fugit = "0.3"
stm32-usbd = "0.6"
usb-device = "0.2"
usbd-serial = "0.1"
panic-halt = "0.2"


# this lets you use `cargo fix`!
[[bin]]
name = "usb-seppo"
test = false
bench = false


[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations


[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

# EOF
